[package]
name = "mbackk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
clap = {version="4.2.1", features=["derive","cargo"]}
env_logger = "0.10.0"
log = "0.4.17"
md5 = "0.7.0"
serde = { version="1.0.159", features=["derive"] }
serde_json = "1.0.95"
tempfile = "3.5.0"
